Add all files to spring boot folder

--- a/spring-boot/compose.yaml
+++ b/spring-boot/compose.yaml
@@ -30,7 +30,7 @@ services:
 
   spring-service:
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     container_name: spring-app
     depends_on:
