Enabled log exporters

--- a/spring-boot/config/otel-colo-config.yml
+++ b/spring-boot/config/otel-colo-config.yml
@@ -7,7 +7,7 @@ exporters:
   debug:
     verbosity: basic
   otlp:
-    endpoint: otel-collector:4317
+    endpoint: <backend-endpoint>:4317
     tls:
       insecure: true
 
