--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -6,8 +6,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
+
 group = 'com.base14.demo'
 version = '0.0.1-SNAPSHOT'
+
 java {
     sourceCompatibility = '17'
 }
@@ -33,9 +35,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // OpenTelemetry Dependencies - Simplified approach using Spring Boot's native support
     implementation platform(SpringBootPlugin.BOM_COORDINATES)
-//    implementation(platform("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.16.0"))
+    implementation(platform("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.16.0"))
     implementation("io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter")
 
 
@@ -69,3 +70,4 @@ springBoot {
     buildInfo {
     }
 }
+
