--- a/spring-boot/compose.yaml
+++ b/spring-boot/compose.yaml
@@ -1,52 +1,49 @@
-version: '3.8'
+  services:
 
-services:
+    otel-collector:
+      image: otel/opentelemetry-collector-contrib:0.128.0
+      container_name: scout-otel-collector
+      ports:
+        - '4317:4317'
+        - '4318:4318'
+      volumes:
+        - ~/otel-config.yml:/etc/otelcol-contrib/config.yaml
+    db:
+      image: mysql:8.0
+      container_name: mysql-db
+      restart: always
+      environment:
+        MYSQL_DATABASE: company
+        MYSQL_ROOT_PASSWORD: '123456'
+        MYSQL_ROOT_HOST: '%'
+        TZ: 'Asia/Kolkata'
+      ports:
+        - '3306:3306'
+      volumes:
+        - mysql_data:/var/lib/mysql
+      healthcheck:
+        test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+        timeout: 20s
+        retries: 10
 
-  otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.128.0
-    container_name: scout-otel-collector
-    ports:
-      - '4317:4317'
-      - '4318:4318'
-    volumes:
-      - ~/otel-config.yml:/etc/otelcol-contrib/config.yaml
-  db:
-    image: mysql:8.0
-    container_name: mysql-db
-    restart: always
-    environment:
-      MYSQL_DATABASE: company
-      MYSQL_ROOT_PASSWORD: '123456'
-      MYSQL_ROOT_HOST: '%'
-      TZ: 'Asia/Kolkata'
-    ports:
-      - '3306:3306'
-    volumes:
-      - mysql_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
+    spring-service:
+      build:
+        context: .
+        dockerfile: Dockerfile
+      container_name: spring-app
+      depends_on:
+        db:
+          condition: service_healthy
+        otel-collector:
+          condition: service_started
+      ports:
+        - '8080:8080'
+      environment:
+        SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/company?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+        SPRING_DATASOURCE_USERNAME: root
+        SPRING_DATASOURCE_PASSWORD: '123456'
+        SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      restart: unless-stopped
 
-  spring-service:
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    container_name: spring-app
-    depends_on:
-      db:
-        condition: service_healthy
-      otel-collector:
-        condition: service_started
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/company?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: '123456'
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-    ports:
-      - '8080:8080'
-      - '8001:8001'
-    restart: unless-stopped
-
-volumes:
-  mysql_data:
+  volumes:
+    mysql_data:
