--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database Configuration
 spring.datasource.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/company?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://db:3306/company?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,6 +17,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Service Identification
 spring.application.name=java-spring-boot-otel
 server.port=8080
+service.address=0.0.0.0
+
 
 # Actuator Configuration
 #management.endpoints.web.exposure.include=health,info,metrics,prometheus
@@ -28,7 +30,8 @@ server.port=8080
 #management.metrics.enable.http.server.requests=true
 #management.metrics.distribution.percentiles-histogram.http.client.requests=true
 #management.metrics.enable.http.client.requests=true
-#management.metrics.enable.all=true
+
+management.metrics.enable.all=true
 management.tracing.enabled=true
 management.tracing.propagation.type=w3c
 
@@ -36,16 +39,18 @@ management.tracing.propagation.type=w3c
 otel.sdk.disabled=false
 
 #JDBC Instrumentation
-otel.instrumentation.jdbc.enabled=true
+#otel.instrumentation.jdbc.enabled=true
 
 #Spring Web MVC
-otel.instrumentation.spring-webmvc.enabled=true
+#otel.instrumentation.spring-webmvc.enabled=true
 
-# Specific endpoints (optional - use these if you need different endpoints for traces vs metrics)
+# Specific endpoints
 otel.exporter.otlp.traces.protocol=http/protobuf
 otel.exporter.otlp.traces.endpoint=http://otel-collector:4318/v1/traces
 otel.exporter.otlp.metrics.protocol=http/protobuf
 otel.exporter.otlp.metrics.endpoint=http://otel-collector:4318/v1/metrics
+otel.exporter.otlp.logs.protocol=http/protobuf
+otel.exporter.otlp.logs.endpoint=http://otel-collector:4318/v1/logs
 
 
 otel.java.global-autoconfigure.enabled=true
@@ -56,9 +61,8 @@ otel.metrics.exporter=otlp
 
 # Sampling Configuration
 otel.traces.sampler=always_on
-# Other options: always_off, traceidratio, parentbased_always_on, parentbased_always_off
 
-# Metrics Export Interval (optional - default is 60 seconds)
+# Metrics Export Interval
 otel.metric.export.interval=30s
 
 # Resource Attributes
@@ -72,11 +76,3 @@ logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.io.opentelemetry=DEBUG
 logging.level.io.micrometer=DEBUG
-
-# Additional Debug Logging (uncomment for detailed troubleshooting)
-# logging.level.io.opentelemetry.exporter.otlp=DEBUG
-# logging.level.io.opentelemetry.sdk.metrics=DEBUG
-# logging.level.io.opentelemetry.sdk.metrics.export=DEBUG
-# logging.level.io.opentelemetry.sdk.common=DEBUG
-# logging.level.io.opentelemetry.instrumentation=DEBUG
-# logging.level.org.springframework.boot.actuate.metrics=DEBUG
