--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,24 @@ __pycache__/
 # Ignore bundler config.
 /.bundle
 
+# Laravel ignores
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
+
+
 # Ignore all environment files.
 /.env*
 
