--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -10,6 +10,11 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
         "laravel/tinker": "^2.5",
+        "open-telemetry/exporter-otlp": "^1.3",
+        "open-telemetry/opentelemetry-auto-laravel": "^1.2",
+        "open-telemetry/opentelemetry-auto-psr18": "^1.1",
+        "open-telemetry/opentelemetry-auto-slim": "^1.1",
+        "open-telemetry/sdk": "^1.6",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
@@ -55,7 +60,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true,
+            "tbachert/spi": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
