--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,11 @@
     "react-markdown": "^7.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@opentelemetry/auto-instrumentations-web": "^0.48.1",
+    "@opentelemetry/exporter-trace-otlp-http":"^0.202.0",
+    "@opentelemetry/exporter-metrics-otlp-http":"0.202.0",
+    "@opentelemetry/exporter-logs-otlp-http":"0.202.0"
   },
   "scripts": {
     "start": "react-scripts start",
