--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,16 @@
     "morgan": "^1.10.0",
     "promise.prototype.finally": "^3.1.2",
     "sequelize": "^6.6.5",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/sdk-trace-node": "^1.9.0",
+    "@opentelemetry/sdk-trace-web": "^1.9.0",
+    "@opentelemetry/sdk-trace-base": "^1.9.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@opentelemetry/sdk-metrics": "^1.9.0",
+    "@opentelemetry/sdk-logs": "^0.203.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0"
   }
 }
