Configure OpenTelemetry with env variables, format code, and update README

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -15,10 +15,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # spring.jpa.show-sql=true
 
 # Service Identification
-spring.application.name=java-spring-boot-otel
+spring.application.name=${SPRING_APPLICATION_NAME:java-spring-boot-otel}
 server.port=8080
 service.address=0.0.0.0
-
 
 # Actuator Configuration
 #management.endpoints.web.exposure.include=health,info,metrics,prometheus
@@ -33,25 +32,25 @@ service.address=0.0.0.0
 
 management.metrics.enable.all=true
 management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
 management.tracing.propagation.type=w3c
 
 # OpenTelemetry SDK Configuration
 otel.sdk.disabled=false
 
-#JDBC Instrumentation
-#otel.instrumentation.jdbc.enabled=true
+# JDBC Instrumentation
+otel.instrumentation.jdbc.enabled=true
 
-#Spring Web MVC
-#otel.instrumentation.spring-webmvc.enabled=true
+# Spring Web MVC
+otel.instrumentation.spring-webmvc.enabled=true
 
 # Specific endpoints
-otel.exporter.otlp.traces.protocol=http/protobuf
-otel.exporter.otlp.traces.endpoint=http://otel-collector:4318/v1/traces
-otel.exporter.otlp.metrics.protocol=http/protobuf
-otel.exporter.otlp.metrics.endpoint=http://otel-collector:4318/v1/metrics
-otel.exporter.otlp.logs.protocol=http/protobuf
-otel.exporter.otlp.logs.endpoint=http://otel-collector:4318/v1/logs
-
+otel.exporter.otlp.traces.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
+otel.exporter.otlp.traces.endpoint=${OTEL_EXPORTER_OTLP_TRACES_ENDPOINT:http://host.docker.internal:4318/v1/traces}
+otel.exporter.otlp.metrics.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
+otel.exporter.otlp.metrics.endpoint=${OTEL_EXPORTER_OTLP_METRICS_ENDPOINT:http://host.docker.internal:4318/v1/metrics}
+otel.exporter.otlp.logs.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
+otel.exporter.otlp.logs.endpoint=${OTEL_EXPORTER_OTLP_LOGS_ENDPOINT:http://host.docker.internal:4318/v1/logs}
 
 otel.java.global-autoconfigure.enabled=true
 
@@ -65,8 +64,7 @@ otel.traces.sampler=always_on
 # Metrics Export Interval
 otel.metric.export.interval=30s
 
-# Resource Attributes
-otel.resource.attributes=service.name=${spring.application.name},service.namespace=base14,deployment.environment=dev,service.version=0.0.1-SNAPSHOT
+# Resource Attributes (set via OTEL_RESOURCE_ATTRIBUTES environment variable)
 
 # Propagators
 otel.propagators=tracecontext,baggage
