--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
-
 group = 'com.base14.demo'
 version = '0.0.1-SNAPSHOT'
 
@@ -26,7 +25,6 @@ dependencyManagement {
     }
 }
 
-
 dependencies {
     // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -35,18 +33,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // OpenTelemetry
     implementation platform(SpringBootPlugin.BOM_COORDINATES)
     implementation(platform("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.16.0"))
     implementation("io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter")
 
-
     // Micrometer for observability (includes OpenTelemetry bridge)
     implementation 'io.micrometer:micrometer-tracing-bridge-otel'
-//    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
+    // implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
 
     // Optional: For manual instrumentation
-//    implementation 'io.opentelemetry:opentelemetry-api'
-//    implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations'
+    // implementation 'io.opentelemetry:opentelemetry-api'
+    // implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations'
 
     // Auto-configuration processor
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
