update Spring Boot to 3.5.7 & dependencies, and configure OTel instrumentation

--- a/spring-boot/Dockerfile
+++ b/spring-boot/Dockerfile
@@ -1,5 +1,5 @@
 # -------- Stage 1: Build the application --------
-FROM gradle:8.4.0-jdk17 AS builder
+FROM gradle:9.2.1-jdk17 AS builder
 
 COPY --chown=gradle:gradle . /app
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 RUN gradle build --no-daemon
 
 # -------- Stage 2: Create a minimal runtime image --------
-FROM eclipse-temurin
+FROM eclipse-temurin:17-jre
 WORKDIR /app
 
 # Copy the fat jar from the build stage
