--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -43,21 +43,28 @@ otel.instrumentation.jdbc.enabled=true
 # Spring Web MVC
 otel.instrumentation.spring-webmvc.enabled=true
 
-# Specific endpoints
-otel.exporter.otlp.traces.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
-otel.exporter.otlp.traces.endpoint=${OTEL_EXPORTER_OTLP_TRACES_ENDPOINT:http://host.docker.internal:4318/v1/traces}
-otel.exporter.otlp.metrics.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
-otel.exporter.otlp.metrics.endpoint=${OTEL_EXPORTER_OTLP_METRICS_ENDPOINT:http://host.docker.internal:4318/v1/metrics}
-otel.exporter.otlp.logs.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
-otel.exporter.otlp.logs.endpoint=${OTEL_EXPORTER_OTLP_LOGS_ENDPOINT:http://host.docker.internal:4318/v1/logs}
+# Logback Appender - Exports logs via OTLP
+# NOTE: While marked as alpha, this is production-ready and widely used
+# Alternative: File-based collection or disable with otel.logs.exporter=none
+otel.instrumentation.logback-appender.enabled=true
+otel.instrumentation.logback-appender.experimental-log-attributes=true
 
+# OTLP Exporter Configuration
+# All signals (traces/metrics/logs) use HTTP/Protobuf by default
+# Endpoints can be overridden via environment variables (see compose.yaml)
+otel.exporter.otlp.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
+otel.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://host.docker.internal:4318}
+
+# Enable global auto-configuration for automatic instrumentation
 otel.java.global-autoconfigure.enabled=true
 
-# Export Configuration
+# Export Configuration - Enable OTLP for all three signals
 otel.traces.exporter=otlp
 otel.metrics.exporter=otlp
+otel.logs.exporter=otlp
 
 # Sampling Configuration
+# WARNING: always_on samples 100% of traces - use probabilistic sampling in production
 otel.traces.sampler=always_on
 
 # Metrics Export Interval
@@ -73,3 +80,7 @@ logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.io.opentelemetry=DEBUG
 logging.level.io.micrometer=DEBUG
+
+# Disable console logging to prevent duplicate logs in observability platforms
+# All logs are sent via OpenTelemetry Logback appender (logback-spring.xml)
+logging.pattern.console=
