--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -43,9 +43,9 @@ otel.instrumentation.jdbc.enabled=true
 # Spring Web MVC
 otel.instrumentation.spring-webmvc.enabled=true
 
-# Logback Appender - Exports logs via OTLP
-# NOTE: While marked as alpha, this is production-ready and widely used
-# Alternative: File-based collection or disable with otel.logs.exporter=none
+# Logback Appender - Enable SDK support for logback appender
+# The appender is manually defined in logback-spring.xml with capture settings
+# This property enables the OpenTelemetry SDK integration required for the appender to work
 otel.instrumentation.logback-appender.enabled=true
 otel.instrumentation.logback-appender.experimental-log-attributes=true
 
@@ -80,7 +80,3 @@ logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.io.opentelemetry=DEBUG
 logging.level.io.micrometer=DEBUG
-
-# Disable console logging to prevent duplicate logs in observability platforms
-# All logs are sent via OpenTelemetry Logback appender (logback-spring.xml)
-logging.pattern.console=
