--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.format_sql=true
+# Uncomment to log SQL to console (dev only)
 # spring.jpa.show-sql=true
 
 # Service Identification
@@ -18,65 +19,49 @@ spring.application.name=${SPRING_APPLICATION_NAME:java-spring-boot-otel}
 server.port=8080
 service.address=0.0.0.0
 
-# Actuator Configuration
-#management.endpoints.web.exposure.include=health,info,metrics,prometheus
-#management.endpoint.health.show-details=always
-#management.endpoint.metrics.enabled=true
-#management.endpoint.prometheus.enabled=true
-#management.metrics.export.prometheus.enabled=true
-#management.metrics.distribution.percentiles-histogram.http.server.requests=true
-#management.metrics.enable.http.server.requests=true
-#management.metrics.distribution.percentiles-histogram.http.client.requests=true
-#management.metrics.enable.http.client.requests=true
-
+# Micrometer Tracing (works with OpenTelemetry)
 management.metrics.enable.all=true
 management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
 management.tracing.propagation.type=w3c
 
-# OpenTelemetry SDK Configuration
+# ===== OpenTelemetry Configuration =====
+
+# Automatic Instrumentation
 otel.sdk.disabled=false
-
-# JDBC Instrumentation
+otel.java.global-autoconfigure.enabled=true
 otel.instrumentation.jdbc.enabled=true
-
-# Spring Web MVC
 otel.instrumentation.spring-webmvc.enabled=true
+# Uncomment if using Kafka
+# otel.instrumentation.kafka.enabled=true
+# Uncomment if using Redis
+# otel.instrumentation.redis.enabled=true
 
-# Logback Appender - Enable SDK support for logback appender
-# The appender is manually defined in logback-spring.xml with capture settings
-# This property enables the OpenTelemetry SDK integration required for the appender to work
+# Logback Appender (manually configured in logback-spring.xml with all capture flags)
 otel.instrumentation.logback-appender.enabled=true
 otel.instrumentation.logback-appender.experimental-log-attributes=true
 
-# OTLP Exporter Configuration
-# All signals (traces/metrics/logs) use HTTP/Protobuf by default
-# Endpoints can be overridden via environment variables (see compose.yaml)
+# OTLP Exporter (overridden by OTEL_EXPORTER_OTLP_* env vars in compose.yaml)
 otel.exporter.otlp.protocol=${OTEL_EXPORTER_OTLP_PROTOCOL:http/protobuf}
 otel.exporter.otlp.endpoint=${OTEL_EXPORTER_OTLP_ENDPOINT:http://host.docker.internal:4318}
 
-# Enable global auto-configuration for automatic instrumentation
-otel.java.global-autoconfigure.enabled=true
-
-# Export Configuration - Enable OTLP for all three signals
+# Signal Exporters
 otel.traces.exporter=otlp
 otel.metrics.exporter=otlp
 otel.logs.exporter=otlp
 
-# Sampling Configuration
-# WARNING: always_on samples 100% of traces - use probabilistic sampling in production
+# Trace Sampling - always_on = 100%
 otel.traces.sampler=always_on
 
-# Metrics Export Interval
+# Metrics Export Frequency
 otel.metric.export.interval=30s
 
-# Resource Attributes (set via OTEL_RESOURCE_ATTRIBUTES environment variable)
-
-# Propagators
+# Context Propagation
 otel.propagators=tracecontext,baggage
 
 # Logging Configuration
 logging.level.root=INFO
 logging.level.org.springframework=INFO
+# Change to INFO in production for reduced log verbosity
 logging.level.io.opentelemetry=DEBUG
 logging.level.io.micrometer=DEBUG
