--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -29,34 +29,30 @@ dependencyManagement {
 }
 
 dependencies {
-    // Spring Boot Starters
+    // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
-    // OpenTelemetry
+    // OpenTelemetry - Automatic Instrumentation
+    // Includes: HTTP, JDBC, Logback appender, and more
     implementation platform(SpringBootPlugin.BOM_COORDINATES)
     implementation(platform("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.21.0"))
     implementation("io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter")
-    // Note: logback-appender is included via spring-boot-starter, no need for explicit dependency
+    implementation('io.micrometer:micrometer-tracing-bridge-otel')
 
-    // Micrometer for observability (includes OpenTelemetry bridge)
-    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
-    // implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
-
-    // Optional: For manual instrumentation
+    // OpenTelemetry - Manual Instrumentation (optional)
+    // Uncomment if you need to create custom spans, metrics, or add attributes
     // implementation 'io.opentelemetry:opentelemetry-api'
     // implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations'
-
-    // Auto-configuration processor
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
     // Database
     runtimeOnly 'com.mysql:mysql-connector-j:9.5.0'
 
-    // Test dependencies
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
