--- a/rails/rails8-sqlite/config/otel-config.yml
+++ b/rails/rails8-sqlite/config/otel-config.yml
@@ -1,8 +1,8 @@
 # OpenTelemetry Collector Configuration
-# Receives telemetry from Spring Boot app, exports to base14 Scout and debug console
+# Receives telemetry from Rails app, exports to base14 Scout and debug console
 
 extensions:
-  oauth2client:  # OAuth2 auth for base14 Scout
+  oauth2client:
     client_id: ${SCOUT_CLIENT_ID}
     client_secret: ${SCOUT_CLIENT_SECRET}
     token_url: ${SCOUT_TOKEN_URL}
@@ -20,23 +20,15 @@ receivers:
       grpc:
         endpoint: 0.0.0.0:4317
       http:
-        endpoint: 0.0.0.0:4318  # Used by Spring Boot app
+        endpoint: 0.0.0.0:4318
 
 processors:
-  memory_limiter:  # Prevent OOM
+  memory_limiter:
     limit_mib: 256
     check_interval: 1s
 
-  # Batch processor (optional) - groups telemetry for efficient export
-  # Uncomment for high-volume production scenarios (100+ requests/sec)
-  # Remember to add 'batch' to pipeline processors below
-  # batch:
-  #   timeout: 1s
-  #   send_batch_size: 1024
-  #   send_batch_max_size: 2048
-
 exporters:
-  otlphttp/b14:  # Export to base14 Scout
+  otlphttp/b14:
     endpoint: ${SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -49,7 +41,7 @@ exporters:
       initial_interval: 1s
       max_interval: 30s
       max_elapsed_time: 300s
-  debug:  # Console output for local debugging
+  debug:
     verbosity: detailed
 
 service:
