--- a/rails/rails8-sqlite/docker-compose.yml
+++ b/rails/rails8-sqlite/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:0.140.0
+    container_name: otel-collector
+    ports:
+      - "4317:4317"
+      - "4318:4318"
+    volumes:
+      - ./config/otel-config.yml:/etc/otelcol-contrib/config.yaml
+    environment:
+      - SCOUT_ENDPOINT=${SCOUT_ENDPOINT}
+      - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID}
+      - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET}
+      - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL}
+    restart: unless-stopped
+
   web:
     build:
       context: .
@@ -12,11 +27,15 @@ services:
       - "3000:3000"
     environment:
       - RAILS_ENV=development
-      - OTEL_SERVICE_NAME=sample-rails-application
-      - SCOUT_CLIENT_ID=
-      - SCOUT_CLIENT_SECRET=
-      - SCOUT_TOKEN_URL=
-      - SCOUT_ENDPOINT=
+      - OTEL_SERVICE_NAME=ruby-rails8-sqlite-otel
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+      - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=otlp
+      - OTEL_LOGS_EXPORTER=otlp
+    depends_on:
+      - otel-collector
+    restart: unless-stopped
 
 volumes:
   rails_storage:
