--- a/spring-boot/java25-mongodb-java-agent/config/otel-config.yml
+++ b/spring-boot/java25-mongodb-java-agent/config/otel-config.yml
@@ -3,9 +3,9 @@
 
 extensions:
   oauth2client:
-    client_id: ${BASE14_CLIENT_ID}
-    client_secret: ${BASE14_CLIENT_SECRET}
-    token_url: ${BASE14_TOKEN_URL}
+    client_id: ${SCOUT_CLIENT_ID}
+    client_secret: ${SCOUT_CLIENT_SECRET}
+    token_url: ${SCOUT_TOKEN_URL}
     endpoint_params:
       audience: b14collector
     timeout: 10s
@@ -29,7 +29,7 @@ processors:
 
 exporters:
   otlphttp/b14:
-    endpoint: ${BASE14_SCOUT_ENDPOINT}
+    endpoint: ${SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
     tls:
