--- a/spring-boot/java25-postgresql/compose.yaml
+++ b/spring-boot/java25-postgresql/compose.yaml
@@ -27,10 +27,10 @@ services:
     volumes:
       - ./config/otel-config.yml:/etc/otelcol-contrib/config.yaml
     environment:
-      - BASE14_SCOUT_ENDPOINT=${BASE14_SCOUT_ENDPOINT}
-      - BASE14_CLIENT_ID=${BASE14_CLIENT_ID}
-      - BASE14_CLIENT_SECRET=${BASE14_CLIENT_SECRET}
-      - BASE14_TOKEN_URL=${BASE14_TOKEN_URL}
+      - SCOUT_ENDPOINT=${SCOUT_ENDPOINT}
+      - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID}
+      - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET}
+      - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL}
     restart: unless-stopped
 
   spring-service:
