move loadgen to root so that it can be used by an example app

--- a/loadgen/Dockerfile
+++ b/loadgen/Dockerfile
@@ -1,16 +1,24 @@
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 WORKDIR /app
 
-# Install dependencies
+# Upgrade pip and install dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Create non-root user
+RUN useradd -m -u 1000 loadgen && \
+    chown -R loadgen:loadgen /app
 
 # Copy load generator script
 COPY loadgen.py .
 
 # Make script executable
 RUN chmod +x loadgen.py
+
+# Switch to non-root user
+USER loadgen
 
 # Default configuration (can be overridden with environment variables)
 ENV TARGET_URL=http://web:3000
