--- a/go/.env.example
+++ b/go/.env.example
@@ -2,17 +2,15 @@
 APP_ENV=development
 APP_PORT=8080
 
-# Database Configuration
-DATABASE_URL=postgres://parking:parking@postgres:5432/parking_db?sslmode=disable
-
-# OpenTelemetry Configuration
+# OpenTelemetry Configuration (Optional)
 OTEL_SERVICE_NAME=go-parking-lot-otel
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
 OTEL_RESOURCE_ATTRIBUTES=deployment.environment=development
 
-# Scout Configuration
-# Get these values from your Scout account at https://scoutapm.com
-SCOUT_ENDPOINT=https://your-endpoint:4318
+# base14 Scout Configuration (Required)
+# Get these values from your base14 Scout account
+# See: https://docs.base14.io/category/opentelemetry-collector-setup
+SCOUT_ENDPOINT=https://your-tenant.base14.io:4318
 SCOUT_CLIENT_ID=your_client_id
 SCOUT_CLIENT_SECRET=your_client_secret
-SCOUT_TOKEN_URL=https://your-auth-server/oauth/token
+SCOUT_TOKEN_URL=https://your-tenant.base14.io/oauth/token
