move python-fast-api to python-fastapi-postgres example improved documentation

--- a/python/python-fastapi-postgres/requirements.txt
+++ b/python/python-fastapi-postgres/requirements.txt
@@ -1,15 +1,16 @@
 fastapi[all]
 pydantic
-psycopg2
+psycopg2-binary
 SQLAlchemy
 email-validator
-passlib
-bcrypt
+passlib[bcrypt]
+bcrypt==4.0.1
 python-jose[cryptography]
 python-multipart
 alembic
 pydantic_settings
 opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-sqlalchemy
 opentelemetry-sdk
 opentelemetry-instrumentation-requests
 requests
