--- a/python/python-fastapi-postgres/compose.yml
+++ b/python/python-fastapi-postgres/compose.yml
@@ -4,6 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: fastapi-app
+    env_file:
+      - .env.local
     ports:
       - "8000:8000"
     environment:
@@ -11,15 +13,16 @@ services:
       - APP_PORT=${APP_PORT:-8000}
       - DB_HOSTNAME=postgres
       - DB_PORT=5432
-      - DB_PASSWORD=${DB_PASSWORD:-SecurePassHere}
+      - DB_PASSWORD=${DB_PASSWORD:?DB_PASSWORD is required}
       - DB_NAME=${DB_NAME:-fastapi}
       - DB_USERNAME=${DB_USERNAME:-postgres}
-      - SECRET_KEY=${SECRET_KEY:-549e20314db0f2fbc78705c6b6d9ab5367d34ece54d90c4cf6c655e9dda0}
+      - SECRET_KEY=${SECRET_KEY:?SECRET_KEY is required}
       - ALGORITHM=${ALGORITHM:-HS256}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
       - OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME:-fastapi-postgres-app}
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT:-http://otel-collector:4318}
       - OTEL_RESOURCE_ATTRIBUTES=${OTEL_RESOURCE_ATTRIBUTES:-deployment.environment=development,service.version=1.0.0}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000}
     depends_on:
       postgres:
         condition: service_healthy
@@ -35,11 +38,11 @@ services:
       start_period: 10s
 
   postgres:
-    image: postgres:14-alpine
+    image: postgres:18-alpine
     container_name: fastapi-postgres
     environment:
       - POSTGRES_USER=${DB_USERNAME:-postgres}
-      - POSTGRES_PASSWORD=${DB_PASSWORD:-SecurePassHere}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:?DB_PASSWORD is required}
       - POSTGRES_DB=${DB_NAME:-fastapi}
     ports:
       - "5432:5432"
@@ -55,7 +58,7 @@ services:
       - app-network
 
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.82.0
+    image: otel/opentelemetry-collector-contrib:0.140.0
     container_name: otel-collector
     volumes:
       - ./config/otel-config.yaml:/etc/otelcol-contrib/config.yaml
