--- a/python/python-fastapi-postgres/compose.yml
+++ b/python/python-fastapi-postgres/compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: fastapi-app
     env_file:
-      - .env.local
+      - .env
     ports:
       - "8000:8000"
     environment:
