--- a/python/python-fastapi-postgres/requirements.txt
+++ b/python/python-fastapi-postgres/requirements.txt
@@ -1,18 +1,19 @@
-fastapi[all]==0.115.6
-pydantic==2.10.3
+fastapi[all]==0.123.10
+starlette==0.50.0
+pydantic==2.12.5
 psycopg2-binary==2.9.10
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.44
 email-validator==2.2.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.2.1
-python-jose[cryptography]==3.3.0
+PyJWT==2.10.1
 python-multipart==0.0.20
 alembic==1.14.0
-pydantic_settings==2.6.1
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-instrumentation-sqlalchemy==0.50b0
-opentelemetry-sdk==1.29.0
-opentelemetry-instrumentation-requests==0.50b0
+pydantic_settings==2.12.0
+opentelemetry-instrumentation-fastapi==0.60b0
+opentelemetry-instrumentation-sqlalchemy==0.60b0
+opentelemetry-sdk==1.39.0
+opentelemetry-instrumentation-requests==0.60b0
 requests==2.32.3
-opentelemetry-exporter-otlp==1.29.0
-opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp==1.39.0
+opentelemetry-api==1.39.0
