Add OpenTelemetry metrics support and upgrade service dependencies

--- a/scout-collector/docker/celery-demo/Dockerfile
+++ b/scout-collector/docker/celery-demo/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.13-slim
 
+# Create non-root user early
+RUN groupadd -r celeryuser && useradd -r -g celeryuser -m celeryuser
+
 WORKDIR /app
 
 # Install system dependencies
@@ -7,15 +10,18 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Poetry
+# Switch to non-root user for Poetry installation
+USER celeryuser
+
+# Install Poetry as non-root user
 RUN curl -sSL https://install.python-poetry.org | python3 -
-ENV PATH="/root/.local/bin:$PATH"
+ENV PATH="/home/celeryuser/.local/bin:$PATH"
 
 # Copy poetry files
-COPY pyproject.toml poetry.lock* ./
+COPY --chown=celeryuser:celeryuser pyproject.toml poetry.lock* ./
 
 # Install dependencies
 RUN poetry install --no-root
 
 # Copy application code
-COPY . .
+COPY --chown=celeryuser:celeryuser . .
