--- a/scout-collector/docker/celery-demo/config/otelcol-config.yaml
+++ b/scout-collector/docker/celery-demo/config/otelcol-config.yaml
@@ -12,6 +12,7 @@ extensions:
 
 exporters:
   debug:
+    verbosity: detailed
   otlphttp/b14:
     endpoint: ${env:SCOUT_ENDPOINT}
     auth:
@@ -28,7 +29,13 @@ processors:
   resource:
     attributes:
     - key: service.name
-      value: 'example-01'
+      value: 'otel-celery-demo'
+      action: upsert
+    - key: deployment.environment
+      value: 'demo'
+      action: upsert
+    - key: service.namespace
+      value: 'base14-examples'
       action: upsert
 
 receivers:
@@ -90,6 +97,7 @@ receivers:
   docker_stats:
     endpoint: unix:///var/run/docker.sock
     collection_interval: 20s
+    api_version: "1.44"
 
   redis:
     endpoint: "redis:6379"
@@ -101,10 +109,10 @@ service:
     traces:
       receivers: [ otlp]
       processors: [ batch, resource]
-      exporters: [ otlphttp/b14] 
+      exporters: [ otlphttp/b14]
     metrics:
       receivers: [ otlp, postgresql/all, redis, rabbitmq, docker_stats ]
-      processors: [ batch ]
+      processors: [ batch, resource ]
       exporters: [ otlphttp/b14 ]
     logs:
       receivers: [ otlp, filelog ]
