--- a/scout-collector/docker/celery-demo/docker-compose.yaml
+++ b/scout-collector/docker/celery-demo/docker-compose.yaml
@@ -8,7 +8,7 @@ x-default-logging: &logging
 services:
   web:
     build: .
-    command: poetry run uvicorn celery_demo.main:app --host 0.0.0.0 --port 8000 --reload
+    command: poetry run opentelemetry-instrument uvicorn celery_demo.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/celery_demo
     ports:
@@ -28,6 +28,7 @@ services:
       - OTEL_TRACES_EXPORTER=otlp
       - OTEL_METRICS_EXPORTER=otlp
       - OTEL_LOGS_EXPORTER=otlp
+      - OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -41,7 +42,7 @@ services:
 
   celery_worker:
     build: .
-    command: poetry run celery -A celery_demo.tasks.celery worker --loglevel=info
+    command: poetry run opentelemetry-instrument celery -A celery_demo.tasks.celery worker --loglevel=info
     volumes:
       - .:/celery_demo
     environment:
@@ -59,6 +60,7 @@ services:
       - OTEL_TRACES_EXPORTER=otlp
       - OTEL_METRICS_EXPORTER=otlp
       - OTEL_LOGS_EXPORTER=otlp
+      - OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -73,9 +75,9 @@ services:
     logging: *logging
 
   db:
-    image: postgres:13
+    image: postgres:18
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
       - ./init-monitoring-user.sql:/docker-entrypoint-initdb.d/init-monitoring-user.sql
     environment:
       - POSTGRES_USER=postgres
@@ -98,7 +100,7 @@ services:
         ]
 
   redis:
-    image: redis:6
+    image: redis:8
     ports:
       - "6379:6379"
     logging: *logging
@@ -106,7 +108,7 @@ services:
       test: ["CMD", "redis-cli", "ping"]
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:4-management
     ports:
       - "5672:5672" # AMQP protocol port
       - "15672:15672" # Management UI port
@@ -123,12 +125,12 @@ services:
       test: ["CMD", "rabbitmqctl", "status"]
 
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.128.0
+    image: otel/opentelemetry-collector-contrib:0.141.0
     container_name: otel-collector
     deploy:
       resources:
         limits:
-          memory: 200M
+          memory: 256M
     restart: unless-stopped
     command: ["--config=/etc/otelcol-config.yaml"]
     user: 0:0
@@ -143,8 +145,8 @@ services:
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL}
     ports:
-      - "4318:4318"
-      - "4317:4317"
+      - "4318:4318"   # OTLP HTTP receiver
+      - "4317:4317"   # OTLP gRPC receiver
       - "55679:55679" # zpages: http://localhost:55679/debug/tracez
     logging: *logging
     depends_on:
