--- a/scout-collector/docker/celery-demo/pyproject.toml
+++ b/scout-collector/docker/celery-demo/pyproject.toml
@@ -10,22 +10,22 @@ requires-python = ">=3.13"
 
 
 dependencies = [
-    "uvicorn (>=0.38.0,<0.39.0)",
-    "fastapi (>=0.121.3,<0.122.0)",
-    "celery (>=5.5.3,<6.0.0)",
+    "uvicorn[standard] (>=0.34.0,<0.35.0)",
+    "fastapi (>=0.124.0,<0.125.0)",
+    "celery (>=5.6.0,<5.7.0)",
     "redis (>=7.1.0,<8.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "sqlalchemy (>=2.0.44,<3.0.0)",
-    "pydantic (>=2.12.4,<3.0.0)",
+    "pydantic (>=2.12.5,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "opentelemetry-instrumentation-celery (>=0.59b0,<0.60)",
-    "opentelemetry-api (>=1.38.0,<2.0.0)",
-    "opentelemetry-sdk (>=1.38.0,<2.0.0)",
-    "opentelemetry-exporter-otlp (>=1.38.0,<2.0.0)",
-    "opentelemetry-instrumentation-fastapi (>=0.59b0,<0.60)",
     "python-environ (>=0.4.54,<0.5.0)",
-    "opentelemetry-instrumentation-sqlalchemy (>=0.59b0,<0.60)",
-    "opentelemetry-instrumentation-redis (>=0.59b0,<0.60)"
+    "opentelemetry-distro (>=0.60b0,<0.61b0)",
+    "opentelemetry-exporter-otlp (>=1.39.0,<1.40.0)",
+    "opentelemetry-instrumentation-celery (>=0.60b0,<0.61b0)",
+    "opentelemetry-instrumentation-fastapi (>=0.60b0,<0.61b0)",
+    "opentelemetry-instrumentation-sqlalchemy (>=0.60b0,<0.61b0)",
+    "opentelemetry-instrumentation-redis (>=0.60b0,<0.61b0)",
+    "opentelemetry-instrumentation-logging (>=0.60b0,<0.61b0)"
 ]
 
 
