Add distributed tracing context propagation and simplify OTEL config

--- a/scout-collector/docker/celery-demo/config/otelcol-config.yaml
+++ b/scout-collector/docker/celery-demo/config/otelcol-config.yaml
@@ -1,80 +1,25 @@
 extensions:
-  zpages:
-    endpoint: 0.0.0.0:55679
   oauth2client:
     client_id: ${env:SCOUT_CLIENT_ID}
     client_secret: ${env:SCOUT_CLIENT_SECRET}
-    endpoint_params:
-      audience: ${env:SCOUT_ENDPOINT}
     token_url: ${env:SCOUT_TOKEN_URL}
+    endpoint_params:
+      audience: b14collector
+    timeout: 10s
     tls:
       insecure_skip_verify: true
-
-exporters:
-  debug:
-    verbosity: detailed
-  otlphttp/b14:
-    endpoint: ${env:SCOUT_ENDPOINT}
-    auth:
-      authenticator: oauth2client
-    tls:
-      insecure_skip_verify: true
-    compression: gzip
-
-processors:
-  batch:
-    timeout: 1s
-    send_batch_size: 1024
-
-  resource:
-    attributes:
-    - key: service.name
-      value: 'otel-celery-demo'
-      action: upsert
-    - key: deployment.environment
-      value: 'demo'
-      action: upsert
-    - key: service.namespace
-      value: 'base14-examples'
-      action: upsert
+  health_check:
+    endpoint: 0.0.0.0:13133
+  zpages:
+    endpoint: 0.0.0.0:55679
 
 receivers:
   otlp:
     protocols:
+      grpc:
+        endpoint: 0.0.0.0:4317
       http:
         endpoint: 0.0.0.0:4318
-
-  filelog:
-    include:
-    - /var/lib/docker/containers/*/*-json.log
-    operators:
-    - id: parser-docker
-      timestamp:
-        layout: '%Y-%m-%dT%H:%M:%S.%LZ'
-        parse_from: attributes.time
-      type: json_parser
-    - field: attributes.time
-      type: remove
-    - id: extract_metadata_from_docker_tag
-      parse_from: attributes.attrs.tag
-      regex: ^(?P<name>[^\|]+)\|(?P<image_name>[^\|]+)\|(?P<id>[^$]+)$
-      type: regex_parser
-      if: 'attributes?.attrs?.tag != nil'
-    - from: attributes.name
-      to: resource["docker.container.name"]
-      type: move
-      if: 'attributes?.name != nil'
-    - from: attributes.image_name
-      to: resource["docker.image.name"]
-      type: move
-      if: 'attributes?.image_name != nil'
-    - from: attributes.id
-      to: resource["docker.container.id"]
-      type: move
-      if: 'attributes?.id != nil'
-    - from: attributes.log
-      to: body
-      type: move
 
   postgresql/all:
     endpoint: db:5432
@@ -94,30 +39,58 @@ receivers:
     password: guest
     collection_interval: 20s
 
-  docker_stats:
-    endpoint: unix:///var/run/docker.sock
-    collection_interval: 20s
-    api_version: "1.44"
-
   redis:
     endpoint: "redis:6379"
     collection_interval: 20s
 
+processors:
+  memory_limiter:
+    limit_mib: 256
+    check_interval: 1s
+  batch:
+    timeout: 10s
+    send_batch_size: 1024
+  resource:
+    attributes:
+    - key: service.name
+      value: 'otel-celery-demo'
+      action: upsert
+    - key: deployment.environment
+      value: 'demo'
+      action: upsert
+    - key: service.namespace
+      value: 'base14-examples'
+      action: upsert
+
+exporters:
+  otlphttp/b14:
+    endpoint: ${env:SCOUT_ENDPOINT}
+    auth:
+      authenticator: oauth2client
+    tls:
+      insecure_skip_verify: true
+    compression: gzip
+    timeout: 30s
+    retry_on_failure:
+      enabled: true
+      initial_interval: 1s
+      max_interval: 30s
+      max_elapsed_time: 300s
+  debug:
+    verbosity: detailed
+
 service:
-  extensions: [ oauth2client, zpages ]
+  extensions: [oauth2client, health_check, zpages]
   pipelines:
     traces:
-      receivers: [ otlp]
-      processors: [ batch, resource]
-      exporters: [ otlphttp/b14]
+      receivers: [otlp]
+      processors: [memory_limiter, batch, resource]
+      exporters: [otlphttp/b14, debug]
     metrics:
-      receivers: [ otlp, postgresql/all, redis, rabbitmq, docker_stats ]
-      processors: [ batch, resource ]
-      exporters: [ otlphttp/b14 ]
+      receivers: [otlp, postgresql/all, rabbitmq, redis]
+      processors: [memory_limiter, batch, resource]
+      exporters: [otlphttp/b14]
     logs:
-      receivers: [ otlp, filelog ]
-      processors: [ batch ]
-      exporters: [ otlphttp/b14, debug ]
-  telemetry:
-    logs:
-      level: info
+      receivers: [otlp]
+      processors: [memory_limiter, batch, resource]
+      exporters: [otlphttp/b14, debug]
