--- a/scout-collector/docker/celery-demo/.gitignore
+++ b/scout-collector/docker/celery-demo/.gitignore
@@ -1,3 +1,30 @@
+# Environment
+.env
+.env.*
+
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+dist/
+build/
+.venv/
+venv/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Ruff/Linting
+.ruff_cache/
+
+# Docker config (generated)
 config/hostname
 config/hosts
 config/resolv.conf
